--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "test": "tsdx test",
     "prepublishOnly": "tsdx build"
   },
+  "resolutions": {
+    "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap"
+  },
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
     "@ethersproject/solidity": "^5.0.9",
-    "@uniswap/sdk-core": "^4",
+    "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap",
     "@uniswap/swap-router-contracts": "^1.2.1",
     "@uniswap/v3-periphery": "^1.1.1",
     "@uniswap/v3-staker": "1.0.0",
