--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "prepublishOnly": "tsdx build"
   },
   "resolutions": {
-    "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap"
+    "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap",
+    "@uniswap/v3-periphery": "git+https://github.com/etcswap/v3-periphery.git#etcswap"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
     "@ethersproject/solidity": "^5.0.9",
     "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap",
     "@uniswap/swap-router-contracts": "^1.2.1",
-    "@uniswap/v3-periphery": "^1.1.1",
+    "@uniswap/v3-periphery": "git+https://github.com/etcswap/v3-periphery.git#etcswap",
     "@uniswap/v3-staker": "1.0.0",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3"
