--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@uniswap/v3-sdk",
+  "name": "@_etcswap/v3-sdk",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.10.0",
-  "description": "⚒️ An SDK for building applications on top of Uniswap V3",
+  "version": "3.10.1",
+  "description": "⚒️ An SDK for building applications on top of ETCswap V3",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-v3-sdk.git",
+  "repository": "https://github.com/etcswap/v3-sdk/tree/etcswap",
   "keywords": [
-    "uniswap",
+    "etcswap",
     "ethereum"
   ],
   "module": "dist/v3-sdk.esm.js",
